# makerhub-backend1

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  api.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  dependencies.py  main.py
app/core/: __init__.py  auth.py  config.py  db.py  logging.py  security.py  utils.py
app/middleware/: auth_middleware.py
app/models/: b6orrow_stuff_model.py  base_model.py  borrow_record_model.py  c10ompetition_model.py  c13leaning_model.py  cleaning_model.py  competition_model.py  d11uty_apply_model.py  d12uty_model.py  duty_apply_model.py  duty_record_model.py  e4vent_model.py  event_model.py  item_model.py  m15essage_model.py  message_model.py  p3rinter_model.py  p9roject_model.py  printer_model.py  project_model.py  r17esource.py  r2egulation_model.py  regulation_model.py  s14chedule_model.py  s7tuff_model.py  schedule_model.py  t5ask_model.py  task_model.py  u1ser_model.py  user_model.py  v8enue_borrow_model.py  venue_borrow_model.py  x16iumi_model.py  xiumi_model.py
app/routes/: 10competition_router.py  11duty_apply_router.py  12duty_router.py  13cleaning_router.py  17resource_router.py  2regulation_router.py  3printer_router.py  7stuff_router.py  8venue_router.py  b6orrow_stuff_router.py  borrow_router.py  c10ompetition_router.py  c13leaning_router.py  cleaning_router.py  competition_router.py  d11uty_apply_router.py  d12uty_router.py  duty_router.py  e4vent_router.py  event_router.py  item_router.py  m15essage_router.py  message_router.py  p3rinter_router.py  p9roject_router.py  printer_router.py  project_router.py  r17esource_router.py  r2egulation_router.py  regulation_router.py  s14chedule_router.py  s7tuff_router.py  schedule_router.py  stuff_router.py  t5ask_router.py  task_router.py  u1ser_router.py  user_router.py  v8enue_router.py  (+3 more)
docs/: architecture.md
nginx/: nginx.conf
tests/: conftest.py
(+91 files in other folders)
