[tool]
name = "society-management"
version = "0.1.0"
description = "MakerHub"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pymongo = "^3.12.0"
minio = "^7.1.0"
loguru = "^0.5.3"
pydantic = "^1.8.2"
python-dotenv = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"